[gd_scene load_steps=6 format=3 uid="uid://bubtpb2sakr5o"]

[ext_resource type="Texture2D" uid="uid://ljygc8o3w3e0" path="res://art/map_resources/objects (2).png" id="1_8iwm7"]
[ext_resource type="Script" uid="uid://g40cd7qdfd7w" path="res://scripts/notice_board.gd" id="1_rbmdp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rw1qp"]
atlas = ExtResource("1_8iwm7")
region = Rect2(1, 1, 14, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_dypi8"]
radius = 26.0192

[sub_resource type="CircleShape2D" id="CircleShape2D_rw1qp"]
radius = 3.0

[node name="NoticeBoard" type="CharacterBody2D"]
script = ExtResource("1_rbmdp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_rw1qp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_dypi8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_rw1qp")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -27.0
offset_right = 46.0
offset_bottom = -11.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "Press F to check"

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
